syntax = "proto3";

package user;

option go_package = "grpc-exmpl/proto/user";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string full_name = 4;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
  UserData user = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
  UserData user = 4;
}

message GetProfileRequest {
  string token = 1;
}

message GetProfileResponse {
  bool success = 1;
  string message = 2;
  UserData user = 3;
}

message UserData {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  string created_at = 5;
  string updated_at = 6;
}